# VisualNovel

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
sources/map/: map_ship.xcf
sources/npc/: cabinBoy.xcf  captain.xcf  greybeard.xcf  hunter.xcf  king.xcf  princess.xcf  tradeswoman.xcf
sources/player/: player_idle.xcf  player_step1.xcf  player_step2.xcf
sources/portraits/: cabinBoy_neutral.xcf  captain_neutral.xcf  greybeard_neutral.xcf  hunter_neutral.xcf  king_neutral.xcf  princess_neutral.xcf  tradeswoman_neutral.xcf
sources/script/: VNovel_script.docx
src/: Collider.cpp  Collider.hpp  DialogueSystem.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  InputHandler.cpp  InputHandler.hpp  Npc.cpp  Npc.hpp  Player.cpp  Player.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.hpp  main.cpp
